store traces in the parameter classes to avoid redundant calculations

--- a/templates/two_scale_soft_beta_.cpp.in
+++ b/templates/two_scale_soft_beta_.cpp.in
@@ -23,6 +23,8 @@
 
 namespace flexiblesusy {
 
+#define TRACE_STRUCT soft_traces
+
 /**
  * Calculates the one-loop beta function of @parameterName@.
  *
