--- a/templates/two_scale_susy_parameters.cpp.in
+++ b/templates/two_scale_susy_parameters.cpp.in
@@ -27,6 +27,7 @@ namespace flexiblesusy {
 
 #define CLASSNAME @ModelName@_susy_parameters
 #define INPUT(parameter) input.parameter
+#define TRACE_STRUCT susy_traces
 
 @ModelName@_susy_parameters::@ModelName@_susy_parameters(const @ModelName@_input_parameters& input_)
    : Beta_function()
@@ -58,6 +59,8 @@ Eigen::ArrayXd @ModelName@_susy_parameters::beta() const
 
 @ModelName@_susy_parameters @ModelName@_susy_parameters::calc_beta() const
 {
+   calc_susy_traces();
+
 @beta@
 
    return @ModelName@_susy_parameters(get_scale(), get_loops(), get_thresholds(), input,
@@ -99,6 +102,11 @@ const @ModelName@_input_parameters& @ModelName@_susy_parameters::get_input() con
 void @ModelName@_susy_parameters::set_input(const @ModelName@_input_parameters& input_)
 {
    input = input_;
+}
+
+void @ModelName@_susy_parameters::calc_susy_traces()
+{
+@calcTraces@
 }
 
 } // namespace flexiblesusy
