--- a/templates/two_scale_soft_parameters.cpp.in
+++ b/templates/two_scale_soft_parameters.cpp.in
@@ -26,6 +26,7 @@
 namespace flexiblesusy {
 
 #define INPUT(parameter) input.parameter
+#define TRACE_STRUCT soft_traces
 
 @ModelName@_soft_parameters::@ModelName@_soft_parameters(const @ModelName@_input_parameters& input_)
    : @ModelName@_susy_parameters(input_)
@@ -51,6 +52,8 @@ Eigen::ArrayXd @ModelName@_soft_parameters::beta() const
 
 @ModelName@_soft_parameters @ModelName@_soft_parameters::calc_beta() const
 {
+   calc_soft_traces();
+
 @beta@
 
    const @ModelName@_susy_parameters susy_betas(@ModelName@_susy_parameters::calc_beta());
@@ -87,6 +90,11 @@ void @ModelName@_soft_parameters::set(const Eigen::ArrayXd& v)
    @ModelName@_susy_parameters::set(v);
 
 @set@
+}
+
+void @ModelName@_soft_parameters::calc_soft_traces()
+{
+@calcTraces@
 }
 
 } // namespace flexiblesusy
