--- a/templates/two_scale_susy_beta_.cpp.in
+++ b/templates/two_scale_susy_beta_.cpp.in
@@ -23,6 +23,8 @@
 
 namespace flexiblesusy {
 
+#define TRACE_STRUCT susy_traces
+
 /**
  * Calculates the one-loop beta function of @parameterName@.
  *
