--- a/templates/two_scale_soft_parameters.hpp.in
+++ b/templates/two_scale_soft_parameters.hpp.in
@@ -28,6 +28,11 @@
 
 namespace flexiblesusy {
 
+#ifdef TRACE_STRUCT_TYPE
+   #undef TRACE_STRUCT_TYPE
+#endif
+#define TRACE_STRUCT_TYPE Soft_traces
+
 class @ModelName@_soft_parameters : public @ModelName@_susy_parameters {
 public:
    @ModelName@_soft_parameters(const @ModelName@_input_parameters& input_ = @ModelName@_input_parameters());
@@ -52,9 +57,8 @@ private:
 
    struct Soft_traces {
 @traceDefs@
-   } soft_traces;
-
-   void calc_soft_traces();
+   };
+   void calc_soft_traces(Soft_traces&) const;
 
 @singleBetaFunctionsDecls@
 };
