--- a/templates/two_scale_soft_beta_.cpp.in
+++ b/templates/two_scale_soft_beta_.cpp.in
@@ -30,7 +30,7 @@ namespace flexiblesusy {
  *
  * @return one-loop beta function
  */
-@parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_one_loop() const
+@parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_one_loop(const Soft_traces& soft_traces) const
 {
 @localDeclOneLoop@
 
@@ -46,7 +46,7 @@ namespace flexiblesusy {
  *
  * @return two-loop beta function
  */
-@parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_two_loop() const
+@parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_two_loop(const Soft_traces& soft_traces) const
 {
 @localDeclTwoLoop@
 
