Print which SARAH`Start[] command is executed
This helps in case the specified model does not exist and we need
to find out which arguments were passed to Start[].

--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -16,6 +16,7 @@ SARAH`SARAH[InputDirectories] = {
 
 Print["Current working directory: ", workingDirectory];
 Print["SARAH output directory: ", $sarahOutputDir];
+Print["Starting model: ", ToString[HoldForm[Start["@ModelName@"@SubModel@]]]];
 
 Start["@ModelName@"@SubModel@];
 
