--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -104,20 +104,20 @@ SARAH_MODEL_FILES_@CLASSNAME@ := \
 all-$(MODNAME): $(LIB@CLASSNAME@)
 
 clean-$(MODNAME):
-		rm -rf $(LIB@CLASSNAME@_OBJ)
-		rm -rf $(EXE@CLASSNAME@_OBJ)
+		-rm -f $(LIB@CLASSNAME@_OBJ)
+		-rm -f $(EXE@CLASSNAME@_OBJ)
 
 clean-$(MODNAME)-src:
-		rm -rf $(LIB@CLASSNAME@_SRC)
-		rm -rf $(EXE@CLASSNAME@_SRC)
-		rm -rf $(METACODE_STAMP_@CLASSNAME@)
+		-rm -f $(LIB@CLASSNAME@_SRC)
+		-rm -f $(EXE@CLASSNAME@_SRC)
+		-rm -f $(METACODE_STAMP_@CLASSNAME@)
 
 distclean-$(MODNAME): clean-$(MODNAME)
-		rm -rf $(LIB@CLASSNAME@_DEP)
-		rm -rf $(LIB@CLASSNAME@)
-		rm -rf $(EXE@CLASSNAME@_DEP)
-		rm -rf $(RUN_@CLASSNAME@_EXE)
-		rm -rf $(SCAN_@CLASSNAME@_EXE)
+		-rm -f $(LIB@CLASSNAME@_DEP)
+		-rm -f $(LIB@CLASSNAME@)
+		-rm -f $(EXE@CLASSNAME@_DEP)
+		-rm -f $(RUN_@CLASSNAME@_EXE)
+		-rm -f $(SCAN_@CLASSNAME@_EXE)
 
 clean::         clean-$(MODNAME)
 
