--- a/templates/two_scale_soft_parameters.hpp.in
+++ b/templates/two_scale_soft_parameters.hpp.in
@@ -63,6 +63,8 @@ private:
 @singleBetaFunctionsDecls@
 };
 
+std::ostream& operator<<(std::ostream&, const @ModelName@_soft_parameters&);
+
 } // namespace flexiblesusy
 
 #endif
