--- a/templates/two_scale_susy_parameters.hpp.in
+++ b/templates/two_scale_susy_parameters.hpp.in
@@ -70,6 +70,8 @@ private:
 @singleBetaFunctionsDecls@
 };
 
+std::ostream& operator<<(std::ostream&, const @ModelName@_susy_parameters&);
+
 } // namespace flexiblesusy
 
 #endif
