--- a/templates/scan.cpp.in
+++ b/templates/scan.cpp.in
@@ -77,8 +77,7 @@ int main()
            << std::setw(12) << std::left << error << ' '
            << std::setw(12) << std::left << stopwatch.get_time_in_seconds();
       if (error) {
-         cout << "\t# ";
-         problems.print(cout);
+         cout << "\t# " << problems;
       }
       cout << '\n';
    }
