per convention distclean should remove the generated Makefile

--- a/examples/standalone/Makefile.in
+++ b/examples/standalone/Makefile.in
@@ -68,6 +68,7 @@ clean-dep:
 		-rm -f $(STANDALONE_DEP)
 
 distclean: clean clean-dep
+		-rm -f Makefile
 		-rm -f $(STANDALONE_EXE)
 
 $(STANDALONE_DEP) $(STANDALONE_OBJ): CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
