adding two-loop tadpoles to GSL array (if enabled)

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -146,6 +146,9 @@ int CLASSNAME::tadpole_equations(const gsl_vector* x, void* params, gsl_vector* 
    if (ewsb_loop_order > 0) {
       model->calculate_DRbar_parameters();
 @calculateOneLoopTadpoles@
+      if (ewsb_loop_order > 1) {
+@calculateTwoLoopTadpoles@
+      }
    }
 
    for (std::size_t i = 0; i < number_of_ewsb_equations; ++i)
