adding empty two-loop tadpole functions to the model class
(if enabled)

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -393,6 +393,8 @@ void CLASSNAME::run_to(double scale, double eps)
 
 @selfEnergyFunctions@
 
+@twoLoopTadpoleFunctions@
+
 @loopMassesFunctions@
 
 @runningDRbarMassesFunctions@
