--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -76,6 +76,7 @@ public:
 @massCalculationPrototypes@
 @tadpoleEqPrototypes@
 @selfEnergyPrototypes@
+@twoLoopTadpolePrototypes@
 @loopMassesPrototypes@
 @runningDRbarMassesPrototypes@
 @dependenceNumPrototypes@
