adding 3rd generation sfermion mass helper functions to the model class

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -25,6 +25,7 @@
 #include "error.hpp"
 #include "root_finder.hpp"
 #include "gsl_utils.hpp"
+#include "mssm_helpers.hpp"
 #ifdef ENABLE_LOOPTOOLS
 #include <clooptools.h>
 #endif
