adding two-loop self-energy function for the MSSM Higgs

--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -397,6 +397,8 @@ void CLASSNAME::run_to(double scale, double eps)
 
 @thirdGenerationHelperFunctions@
 
+@twoLoopSelfEnergyFunctions@
+
 @twoLoopTadpoleFunctions@
 
 @loopMassesFunctions@
