--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -77,6 +77,7 @@ public:
 @tadpoleEqPrototypes@
 @selfEnergyPrototypes@
 @thirdGenerationHelperPrototypes@
+@twoLoopSelfEnergyPrototypes@
 @twoLoopTadpolePrototypes@
 @loopMassesPrototypes@
 @runningDRbarMassesPrototypes@
