implement NMSSM two-loop tadpoles
Since the NMSSM has no Mu term, I introduced the model file variable
`EffectiveMu' which the user has to set to the effective Mu.

--- a/model_files/NMSSM/FlexibleSUSY.m.in
+++ b/model_files/NMSSM/FlexibleSUSY.m.in
@@ -69,3 +69,6 @@ InitialGuessAtLowScale = {
 };
 
 InitialGuessAtHighScale = {};
+
+UseHiggs2LoopNMSSM = True;
+EffectiveMu = \[Lambda] vS / Sqrt[2];
