--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -1,37 +1,38 @@
 # Package information
-PKGNAME    := @PKGNAME@
-VERSION    := @FLEXIBLESUSY_VERSION@
-ABSBASEDIR := @ABSBASEDIR@
+PKGNAME            := @PKGNAME@
+VERSION            := @FLEXIBLESUSY_VERSION@
+ABSBASEDIR         := @ABSBASEDIR@
 
 # Makefile modules
-MODELS     := @MODELS@
-MODULES    := config src legacy slhaea meta templates $(MODELS) test examples doc
+MODELS             := @MODELS@
+MODULES            := config src legacy slhaea meta templates \
+                      $(MODELS) test examples doc
 
 # Variables for Mathematica meta code
-MATH       := @MATH@
-ALGORITHMS := @ALGORITHMS@
+MATH               := @MATH@
+ALGORITHMS         := @ALGORITHMS@
 
 # Variables for compilation
-CXX        := @CXX@
-CPPFLAGS   := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
-CXXFLAGS   := @CXXFLAGS@
-CXX_DEP_GEN:= @CXX_DEP_GEN@
-FC         := @FC@
-FFLAGS     := @FFLAGS@
-FLIBS      := @FLIBS@
-FOR_DEP_GEN:= @FOR_DEP_GEN@
-MAKELIB    := @MAKELIB@
-LIBEXT     := @LIBEXT@
-BOOSTTESTLIBS   := @BOOSTTESTLIBS@
-BOOSTTHREADLIBS := @BOOSTTHREADLIBS@
-BOOSTFLAGS := @BOOSTFLAGS@
-EIGENFLAGS := @EIGENFLAGS@
-GSLLIBS    := @GSLLIBS@
-GSLFLAGS   := @GSLFLAGS@
-LAPACKLIBS := @LAPACKLIBS@
-LOOPTOOLSFLAGS := @LOOPTOOLSFLAGS@
-LOOPTOOLSLIBS  := @LOOPTOOLSLIBS@
-THREADLIBS := @THREADLIBS@
+CXX                := @CXX@
+CPPFLAGS           := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
+CXXFLAGS           := @CXXFLAGS@
+CXX_DEP_GEN        := @CXX_DEP_GEN@
+FC                 := @FC@
+FFLAGS             := @FFLAGS@
+FLIBS              := @FLIBS@
+FOR_DEP_GEN        := @FOR_DEP_GEN@
+MAKELIB            := @MAKELIB@
+LIBEXT             := @LIBEXT@
+BOOSTTESTLIBS      := @BOOSTTESTLIBS@
+BOOSTTHREADLIBS    := @BOOSTTHREADLIBS@
+BOOSTFLAGS         := @BOOSTFLAGS@
+EIGENFLAGS         := @EIGENFLAGS@
+GSLLIBS            := @GSLLIBS@
+GSLFLAGS           := @GSLFLAGS@
+LAPACKLIBS         := @LAPACKLIBS@
+LOOPTOOLSFLAGS     := @LOOPTOOLSFLAGS@
+LOOPTOOLSLIBS      := @LOOPTOOLSLIBS@
+THREADLIBS         := @THREADLIBS@
 
 # Switches
 ENABLE_COMPILE     := @ENABLE_COMPILE@
