store info about low-energy model in model info module

--- a/templates/info.cpp.in
+++ b/templates/info.cpp.in
@@ -27,6 +27,7 @@ namespace @ModelName@_info {
 @particleNames@
 @particleLaTeXNames@
 @parameterNames@
+   const bool is_low_energy_model = @isLowEnergyModel@;
 }
 
 } // namespace flexiblesusy
