--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -17,6 +17,7 @@ CXX                := @CXX@
 CPPFLAGS           := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS           := @CXXFLAGS@
 CXX_DEP_GEN        := @CXX_DEP_GEN@
+CXXFLAGS_DEP_GEN   := @CXXFLAGS_DEP_GEN@
 FC                 := @FC@
 FFLAGS             := @FFLAGS@
 FLIBS              := @FLIBS@
@@ -103,7 +104,7 @@ clean-dep:
 
 %.d: %.cpp
 # -MT '$*.o' ensures that the target contains the full path
-	$(CXX_DEP_GEN) $(CPPFLAGS) $(CXXFLAGS) -MM -MP -MG -o $@ -MT '$*.o' $^
+	$(CXX_DEP_GEN) $(CPPFLAGS) $(CXXFLAGS_DEP_GEN) -MM -MP -MG -o $@ -MT '$*.o' $^
 
 %.d: %.f
 # the sed script ensures that the target contains the full path
@@ -132,6 +133,7 @@ showbuild:
 	@echo "CPPFLAGS           = $(CPPFLAGS)"
 	@echo "CXXFLAGS           = $(CXXFLAGS)"
 	@echo "CXX_DEP_GEN        = $(CXX_DEP_GEN)"
+	@echo "CXXFLAGS_DEP_GEN   = $(CXXFLAGS_DEP_GEN)"
 	@echo "FC                 = $(FC)"
 	@echo "FFLAGS             = $(FFLAGS)"
 	@echo "FLIBS              = $(FLIBS)"
