--- a/config/Makefile.tower.in
+++ b/config/Makefile.tower.in
@@ -29,6 +29,7 @@ CXX             := @CXX@
 CPPFLAGS        := @CPPFLAGS@ -I. $(INCFLEXI) $(INCLEGACY) $(INCSLHAEA) $(INCMODEL1) $(INCMODEL2)
 CXXFLAGS        := @CXXFLAGS@
 CXX_DEP_GEN     := @CXX_DEP_GEN@
+CXXFLAGS_DEP_GEN:= @CXXFLAGS_DEP_GEN@
 FC              := @FC@
 FFLAGS          := @FFLAGS@
 FLIBS           := @FLIBS@
@@ -106,7 +107,7 @@ endif
 
 %.d: %.cpp
 # -MT '$*.o' ensures that the target contains the full path
-	$(CXX_DEP_GEN) $(CPPFLAGS) $(CXXFLAGS) -MM -MP -MG -o $@ -MT '$*.o' $^
+	$(CXX_DEP_GEN) $(CPPFLAGS) $(CXXFLAGS_DEP_GEN) -MM -MP -MG -o $@ -MT '$*.o' $^
 
 %.d: %.f
 # the sed script ensures that the target contains the full path
@@ -136,6 +137,7 @@ showbuild:
 	@echo "CPPFLAGS           = $(CPPFLAGS)"
 	@echo "CXXFLAGS           = $(CXXFLAGS)"
 	@echo "CXX_DEP_GEN        = $(CXX_DEP_GEN)"
+	@echo "CXXFLAGS_DEP_GEN   = $(CXXFLAGS_DEP_GEN)"
 	@echo "FC                 = $(FC)"
 	@echo "FFLAGS             = $(FFLAGS)"
 	@echo "FLIBS              = $(FLIBS)"
