allow to constrain the boundary condition scale
via the new model file variables {Low,SUSY,High}ScaleMinimum and
{Low,SUSY,High}ScaleMaximum .

--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -142,6 +142,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::reset()
 void @ModelName@_low_scale_constraint<Two_scale>::update_scale()
 {
 @calculateScale@
+@restrictScale@
 }
 
 void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_couplings()
