--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -152,6 +152,8 @@ void @ModelName@_high_scale_constraint<Two_scale>::update_scale()
       scale = get_initial_scale_guess();
       errno = 0;
    }
+
+@restrictScale@
 }
 
 } // namespace flexiblesusy
