restrict the E6SSM GUT scale to be within [1.e4, 5.e17]
This avoids non-perturbative problems due to a badly guessed /
calculated GUT scale.

--- a/model_files/E6SSM/FlexibleSUSY.m.in
+++ b/model_files/E6SSM/FlexibleSUSY.m.in
@@ -46,6 +46,10 @@ HighScale = g1 == g2;
 
 HighScaleFirstGuess = 1.0 10^16;
 
+HighScaleMinimum = 1.0 10^4;
+
+HighScaleMaximum = 5.0 10^17;
+
 HighScaleInput={
    {gN, g1},
    {T[Ye], Azero*Ye},
